--- a/app.json
+++ b/app.json
@@ -32,6 +32,11 @@
         "value": "",
         "required": true
       },
+       "MUST_JOIN": {
+        "description": "Force Sub Without @",
+        "value": "",
+        "required": false
+      },
       "OWNER_ID": {
         "description": "The user id of user whom you would like to add as OWNER.",
         "value": "",
